--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -26,6 +26,7 @@
     background: white;
     padding: 4px;
     box-shadow: 0px 5px 10px #EEE;
+    margin-top: 1em;
 }
 
 .homepage .card-content {
