--- a/public/css/managebooks.css
+++ b/public/css/managebooks.css
@@ -1,22 +1,30 @@
+.manage-books-page {
+    margin-top: 140px;
+}
+
 .manage-books-button-group button {
     padding: 1em;
     margin-left: 0.5em;
     margin-right: 0.5em;
     margin-top: 0.5em;
 }
+
 .manage-books-details {
     padding-left: 0.5em;
 }
+
 .edit-book-upload-btn {
     position: relative;
     overflow: hidden;
     margin-top: 70px; 
 }
+
 @media only screen and (max-width: 990px) {
     .edit-book-upload-btn {
         margin-top: 20px;
     }
 }
+
 .edit-book-upload-btn input[type=file] {
     position: absolute;
     top: 0;
@@ -32,11 +40,13 @@
     cursor: inherit;
     display: block;
 }
+
 #edit-book-img-upload {
     width: 200px;
     height: 200px;
     margin: auto;
 }
+
 .edit-book-progress-bar {
     display: none;
 }
