--- a/public/css/about.css
+++ b/public/css/about.css
@@ -2,6 +2,22 @@
     margin-top: 110px;
 }
 
+.about-page .vh-center {
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 80vh;
+    background: url("/images/book-background.jpg");
+    color: white;
+}
+
+.about-page .profile-picture {
+    border-radius: 50%;
+}
+
+
 .fa-facebook-official {
     color: #4267b2;
 }
