--- a/public/css/homepage.css
+++ b/public/css/homepage.css
@@ -37,6 +37,12 @@
     padding-left: 1.5em;
 }
 
+.homepage .card-content h5 {
+    max-height: 1em;
+    overflow: hidden;
+    white-space: nowrap;
+}
+
 .homepage .card:hover {
     box-shadow: 0px 10px 20px #EEE;
 }
