fix bug in signout

--- a/public/css/about.css
+++ b/public/css/about.css
@@ -10,7 +10,7 @@
     width: 100%;
     height: 82vh;
     background: url("/images/book-background.jpg");
-    color: white;
+    color: black;
 }
 
 .about-page .profile-picture {
