update about page

--- a/public/template/about.html
+++ b/public/template/about.html
@@ -32,48 +32,65 @@
                 </h2>
             </div>
         </div>
-        <div class="row">
-            <br>
-            <div class="col-md-3 text-center">
-                <img class="img-responsive profile-picture" src="images/atul.jpg" alt="atul">
-                <h4>
-                    <p>Atul Sharma</p>
-                </h4>
-                <h1><a href="https://www.facebook.com/theatsharma" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/theatsharma" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="https://plus.google.com/100385871696349461908" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/theatsharma/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+        <div class="team-section">
+            <div class="row">
+                <div class="col-md-4 text-center">
+                    <img class="img-responsive profile-picture" src="images/atul.jpg" alt="atul">
+                    <h4>
+                        <p>Atul Sharma</p>
+                    </h4>
+                    <h1><a href="https://www.facebook.com/theatsharma" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/theatsharma" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/100385871696349461908" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/theatsharma/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img class="img-responsive profile-picture" src="images/abhi.jpg" alt="abhimanyu">
+                    <h4>
+                        <p>Abhimanyu Singh Jaitawat</p>
+                    </h4>
+                    <h1><a href="https://www.facebook.com/abhimanyu.s.jaitawat" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/im_asjaitawat" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/u/0/102529946302044884684" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/abhisjaitawat/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+                </div>
+                <div class="col-md-4 text-center">
+                    <img class="img-responsive profile-picture" src="images/lalit.jpg" alt="lalit" style="height: 262.5px; width: 262.5px">
+                    <h4>
+                        <p>Lalit Kishor Singh</p>
+                    </h4>
+                    <h1><a href="https://www.facebook.com/lalitkishorsingh.tanwar?fref=ts" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/105587350093837007716" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/lalitcoder/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+                </div>
             </div>
-            <div class="col-md-3 text-center">
-                <img class="img-responsive profile-picture" src="images/abhi.jpg" alt="abhimanyu">
-                <h4>
-                    <p>Abhimanyu Singh Jaitawat</p>
-                </h4>
-                <h1><a href="https://www.facebook.com/abhimanyu.s.jaitawat" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/im_asjaitawat" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="https://plus.google.com/u/0/102529946302044884684" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/abhisjaitawat/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
-            </div>
-            <div class="col-md-3 text-center">
-                <img class="img-responsive profile-picture" src="images/lalit.jpg" alt="lalit" style="height: 262.5px; width: 262.5px">
-                <h4>
-                    <p>Lalit Kishor Singh</p>
-                </h4>
-                <h1><a href="https://www.facebook.com/lalitkishorsingh.tanwar?fref=ts" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="https://plus.google.com/105587350093837007716" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/lalitcoder/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
-            </div>
-            <div class="col-md-3 text-center">
-                <img class="img-responsive profile-picture" src="images/ishan.jpg" alt="ishan">
-                <h4>
-                    <p>Ishan Saxena</p>
-                </h4>
-                <h1><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
-                    <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
-                    <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
-                    <a href="https://www.linkedin.com/in/ishancoder/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+            <div class="row">
+                <div class="col-md-3 col-md-offset-3 text-center">
+                    <img class="img-responsive profile-picture" src="images/rajat.jpg" alt="rajat">
+                    <h4>
+                        <p>Rajat Patwa</p>
+                    </h4>
+                    <h1><a href="https://www.facebook.com/razatx/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <a href="https://in.linkedin.com/in/rajatpatwa/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+                </div>
+                <div class="col-md-3 text-center">
+                    <img class="img-responsive profile-picture" src="images/ishan.jpg" alt="ishan">
+                    <h4>
+                        <p>Ishan Saxena</p>
+                    </h4>
+                    <h1><a href="https://www.facebook.com/" target="_blank"><i class="fa fa-facebook-official" aria-hidden="true"></i></a>
+                        <a href="https://twitter.com/" target="_blank"><i class="fa fa-twitter" aria-hidden="true"></i></a>
+                        <a href="https://plus.google.com/" target="_blank"><i class="fa fa-google-plus-official" aria-hidden="true"></i></a>
+                        <a href="https://www.linkedin.com/in/ishancoder/" target="_blank"><i class="fa fa-linkedin" aria-hidden="true"></i></a></h1>
+                </div>
             </div>
         </div>
     </div>
+
+    <footer class="row text-center">
+        <p>All right reserved @theBukz pvt. ltd</p>
+    </footer>
 </section>
