--- a/public/css/about.css
+++ b/public/css/about.css
@@ -15,6 +15,19 @@
 
 .about-page .profile-picture {
     border-radius: 50%;
+    max-width: 200px;
+    max-height: 200px;
+    margin: auto;
+}
+
+.about-page .team-section {
+    padding: 1em;
+}
+
+.about-page footer {
+    background: #1A237E;
+    color: white;
+    padding: 1em;
 }
 
 
