--- a/public/template/about.html
+++ b/public/template/about.html
@@ -1,24 +1,28 @@
 <section class="about-page">
     <div class="vh-center">
-        <h1>A Reader lives a thousand lives, before he dies - George R.R. Martin</h1>
+        <div class="banner">
+            <h1>
+                <sup><i class="fa fa-quote-left" aria-hidden="true"></i></sup>
+                A Reader lives a thousand lives, before he dies.</h1>
+            <h4 style="width: 80%;" class="text-right"> - George R.R. Martin</h4>
+        </div>
     </div>
     <div class="container">
         <div class="row">
             <br>
             <br>
             <div class="col-md-8">
-                <p class="text-left">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's
-                    standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled
-                    it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic
-                    typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset
-                    sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus
-                    PageMaker including versions of Lorem Ipsum.</p>
-                <p class="text-left">It is a long established fact that a reader will be distracted by the readable content of a page when looking
-                    at its layout. The point of using Lorem Ipsum is that it has a more-or-less normal distribution of letters,
-                    as opposed to using 'Content here, content here', making it look like readable English. Many desktop
-                    publishing packages and web page editors now use Lorem Ipsum as their default model text, and a search
-                    for 'lorem ipsum' will uncover many web sites still in their infancy. Various versions have evolved over
-                    the years, sometimes by accident, sometimes on purpose (injected humour and the like).</p>
+                <p class="text-left">Let's face it : college textbooks are insanely expensive. And, at the end of the term, the bookstore gives
+                    students virtually nothing back for their books. We believe in a better way for students to sell their
+                    textbooks quickly, conveniently, and for a fair price. In spite of our substantial size and reach, we
+                    remain grounded by our company's core values, which have guided us through the ups and downs of the bookselling
+                    industry. Each and every employee's love of books drives us forward.</p>
+                <p class="text-left">We save you time and money by searching every major catalog online, and letting you know which booksellers
+                    are offering the best prices and selection. When you find a book you like, you can buy it directly from
+                    the original seller; we never charge a markup.</p>
+                <h3>MISSION</h3>
+                <p class="text-left">Our mission is to be the world's best destination for readers, a place that fosters a culture of reading
+                    and connects people with the books they'll love.</p>
             </div>
             <div class="col-md-4">
                 <img class="img-responsive pull-right" src="images/book_2.jpg" alt="Books" style="height: 400px">
